build/log/idf_py_stderr_output_154120
Command: make -j 6 all
/home/bmetal/esp-idf/uartTest/main/uartTest.c: In function 'uart_rcv':
/home/bmetal/esp-idf/uartTest/main/uartTest.c:50:53: error: 'pattern_chr' undeclared (first use in this function); did you mean 'pattern_char'?
   50 |         uart_enable_pattern_det_baud_intr(uart_num, pattern_chr, chr_num, 500, 0, 0);
      |                                                     ^~~~~~~~~~~
      |                                                     pattern_char
/home/bmetal/esp-idf/uartTest/main/uartTest.c:50:53: note: each undeclared identifier is reported only once for each function it appears in
In file included from /home/bmetal/esp-idf/components/esp_common/include/esp_check.h:9,
                 from /home/bmetal/esp-idf/components/esp_driver_uart/include/driver/uart.h:14,
                 from /home/bmetal/esp-idf/uartTest/main/uartTest.c:2:
/home/bmetal/esp-idf/uartTest/main/uartTest.c:61:63: error: 'rx_incoming' undeclared (first use in this function)
   61 |                         ESP_LOGI("Data Read", "%d bytes:'%s'",rx_incoming,rx_data);
      |                                                               ^~~~~~~~~~~
/home/bmetal/esp-idf/components/log/include/esp_log.h:220:167: note: in definition of macro 'ESP_LOG_LEVEL'
  220 |         if (ESP_LOG_GET_LEVEL(configs)==ESP_LOG_ERROR)        { esp_log(ESP_LOG_CONFIG_INIT(ESP_LOG_ERROR),   tag, LOG_FORMAT(E, format), esp_log_timestamp(), tag, ##__VA_ARGS__); } \
      |                                                                                                                                                                       ^~~~~~~~~~~
/home/bmetal/esp-idf/components/log/include/esp_log.h:127:41: note: in expansion of macro 'ESP_LOG_LEVEL_LOCAL'
  127 | #define ESP_LOGI(tag, format, ...) do { ESP_LOG_LEVEL_LOCAL(ESP_LOG_INFO, tag, format, ##__VA_ARGS__); } while(0)
      |                                         ^~~~~~~~~~~~~~~~~~~
/home/bmetal/esp-idf/uartTest/main/uartTest.c:61:25: note: in expansion of macro 'ESP_LOGI'
   61 |                         ESP_LOGI("Data Read", "%d bytes:'%s'",rx_incoming,rx_data);
      |                         ^~~~~~~~
/home/bmetal/esp-idf/uartTest/main/uartTest.c:54:25: warning: unused variable 'rx_junk_read' [-Wunused-variable]
   54 |                 uint8_t rx_junk_read = uart_read_bytes(uart_num, rx_junk, index, 500);
      |                         ^~~~~~~~~~~~
/home/bmetal/esp-idf/uartTest/main/uartTest.c:48:14: warning: unused variable 'pattern_char' [-Wunused-variable]
   48 |         char pattern_char = 0xAA;
      |              ^~~~~~~~~~~~
configdep.c:648: in main: exec_process exited with error code: 1
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:79: esp-idf/main/CMakeFiles/__idf_main.dir/uartTest.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:9466: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
